Plant some seeds, fix some layout issues, implement video embedding

--- a/app/assets/stylesheets/form.css
+++ b/app/assets/stylesheets/form.css
@@ -3,7 +3,7 @@
  *
  */
 
-#form {
+form {
   margin: 0 auto;
   padding: 0 auto;
   width: 14%;
